progresso em integrar a biblioteca do luiz

--- a/lib_test.ipynb
+++ b/lib_test.ipynb
@@ -6,14 +6,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "AggregativeQuantifier.predict() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 67\u001b[0m\n\u001b[0;32m     61\u001b[0m           qtf \u001b[38;5;241m=\u001b[39m value()\n\u001b[0;32m     63\u001b[0m      qtf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[1;32m---> 67\u001b[0m      \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mqtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     70\u001b[0m \u001b[38;5;66;03m# pwk = PWK(learner=PWKCLF())\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m# ms2 = MS2()\u001b[39;00m\n\u001b[0;32m     72\u001b[0m \u001b[38;5;66;03m# t50 = T50()\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    148\u001b[0m \n\u001b[0;32m    149\u001b[0m \u001b[38;5;66;03m# print(_T50(test_scores=test_scores, tprfpr=tprfpr))\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: AggregativeQuantifier.predict() takes 2 positional arguments but 3 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_keys'>\n",
+      "CC: {0: 0.23791935980301632, 1: 0.7620806401969837}\n",
+      "PCC: {0: 0.23919080266172796, 1: 0.760809197338272}\n",
+      "EMQ: {0: 0.23840281292475693, 1: 0.761597187075243}\n",
+      "FM: {0: 0.23735255771575595, 1: 0.7626474422842441}\n",
+      "PWK: {0: 0.24345952600800247, 1: 0.7565404739919975}\n",
+      "ACC: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
+      "MAX: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
+      "MS: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
+      "MS2: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
+      "PACC: {0: 0.23897098999754163, 1: 0.7610290100024584}\n",
+      "T50: {0: 0.23114675343299518, 1: 0.7688532465670048}\n",
+      "X: {0: 0.2370110255390595, 1: 0.7629889744609405}\n",
+      "DyS: {0: 0.23776256577370214, 1: 0.7622374342262979}\n",
+      "DySsyn: {0: 0.2511794426599303, 1: 0.7488205573400697}\n",
+      "HDy: {0: 0.24, 1: 0.76}\n",
+      "SMM: {0: 0.2381261093456679, 1: 0.7618738906543321}\n",
+      "SORD: {0: 0.24, 1: 0.76}\n"
      ]
     }
    ],
@@ -23,15 +36,16 @@
     "from mlquantify import set_arguments\n",
     "from mlquantify.methods import AGGREGATIVE\n",
     "\n",
+    "from qtfrecommender.evaluator import QuantifierEvaluator\n",
     "import pdb\n",
     "\n",
     "from quantifiers.T50 import T50 as _T50\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from copy import deepcopy\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from utils.getTPRFPR import getTPRFPR\n",
@@ -47,10 +61,13 @@
     "y_test = dts_test.pop('class').to_numpy()\n",
     "X_test = dts_test.values\n",
     "\n",
-    "clf = LogisticRegression(random_state=42)\n",
-    "train_scores = getTrainingScores(X_train, y_train, 10, clf)[0]\n",
-    "y_labels = train_scores.pop('class').to_numpy()\n",
     "\n",
+    "qtf_evaluator = QuantifierEvaluator()\n",
+    "qtf_evaluator.evaluate_quantifiers(\"test\", X_train, y_train, X_test, y_test)\n",
+    "\n",
+    "\n",
+    "train_scores, clf = getTrainingScores(X_train, y_train, 10, LogisticRegression(random_state=42))\n",
+    "y_labels = train_scores.pop('class').to_numpy()\n",
     "test_scores = clf.predict_proba(X_test)# [:,1]\n",
     "y_pred = clf.predict(X_test)\n",
     "\n",
@@ -67,23 +84,18 @@
     "                 posteriors_train=train_scores # Scores extracted from TRAIN set ()\n",
     "            )\n",
     "\n",
+    "methods = deepcopy(AGGREGATIVE)\n",
+    "methods.pop('GAC', None)\n",
+    "methods.pop('GPAC', None)\n",
+    "# methods.pop('FM', None)\n",
+    "# methods.pop('DySsyn', None)\n",
     "\n",
-    "\n",
-    "AGGREGATIVE.pop('FM', None)\n",
-    "AGGREGATIVE.pop('GAC', None)\n",
-    "AGGREGATIVE.pop('GPAC', None)\n",
-    "AGGREGATIVE.pop('DySsyn', None)\n",
-    "\n",
-    "for key, value in AGGREGATIVE.items():\n",
+    "for key, value in methods.items():\n",
     "     if key == \"PWK\":\n",
     "          qtf = value(learner=PWKCLF())\n",
     "     else:\n",
     "          qtf = value()\n",
-    "     \n",
     "     qtf.fit(X_train, y_train)\n",
-    "\n",
-    "\n",
-    "\n",
     "     print(f\"{key}: {qtf.predict(X_test)}\")\n",
     "\n",
     "\n",
@@ -178,9 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tprfpr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tpr \u001b[38;5;241m=\u001b[39m \u001b[43mtprfpr\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtpr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m      2\u001b[0m fpr \u001b[38;5;241m=\u001b[39m tprfpr[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfpr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m      3\u001b[0m tpr\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tprfpr' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tpr = tprfpr['tpr'].to_numpy()\n",
     "fpr = tprfpr['fpr'].to_numpy()\n",
