finished quantifier evaluator

--- a/lib_test.ipynb
+++ b/lib_test.ipynb
@@ -2,32 +2,200 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'dict_keys'>\n",
-      "CC: {0: 0.23791935980301632, 1: 0.7620806401969837}\n",
-      "PCC: {0: 0.23919080266172796, 1: 0.760809197338272}\n",
-      "EMQ: {0: 0.23840281292475693, 1: 0.761597187075243}\n",
-      "FM: {0: 0.23735255771575595, 1: 0.7626474422842441}\n",
-      "PWK: {0: 0.24345952600800247, 1: 0.7565404739919975}\n",
-      "ACC: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
-      "MAX: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
-      "MS: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
-      "MS2: {0: 0.2376806782723606, 1: 0.7623193217276394}\n",
-      "PACC: {0: 0.23897098999754163, 1: 0.7610290100024584}\n",
-      "T50: {0: 0.23114675343299518, 1: 0.7688532465670048}\n",
-      "X: {0: 0.2370110255390595, 1: 0.7629889744609405}\n",
-      "DyS: {0: 0.23776256577370214, 1: 0.7622374342262979}\n",
-      "DySsyn: {0: 0.2511794426599303, 1: 0.7488205573400697}\n",
-      "HDy: {0: 0.24, 1: 0.76}\n",
-      "SMM: {0: 0.2381261093456679, 1: 0.7618738906543321}\n",
-      "SORD: {0: 0.24, 1: 0.76}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantifier</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>sample_size</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>pred_prev</th>\n",
+       "      <th>none</th>\n",
+       "      <th>abs_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CC</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000e-02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.000085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PCC</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.475831e-02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.000083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EMQ</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.338061e-23</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PWK</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.008063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACC</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.080928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>X</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.986437e-01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.077645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2996</th>\n",
+       "      <td>DyS</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.999554e-01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.016057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2997</th>\n",
+       "      <td>HDy</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.036922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2998</th>\n",
+       "      <td>SMM</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2999</th>\n",
+       "      <td>SORD</td>\n",
+       "      <td>test</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.186553</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     quantifier dataset  sample_size  iteration  alpha     pred_prev  none  \\\n",
+       "0            CC    test          100          1    0.0  1.000000e-02  0.01   \n",
+       "1           PCC    test          100          1    0.0  2.475831e-02  0.02   \n",
+       "2           EMQ    test          100          1    0.0  1.338061e-23  0.00   \n",
+       "3           PWK    test          100          1    0.0  0.000000e+00  0.00   \n",
+       "4           ACC    test          100          1    0.0  0.000000e+00  0.00   \n",
+       "...         ...     ...          ...        ...    ...           ...   ...   \n",
+       "2995          X    test          100         10    1.0  9.986437e-01  0.00   \n",
+       "2996        DyS    test          100         10    1.0  9.999554e-01  0.00   \n",
+       "2997        HDy    test          100         10    1.0  1.000000e+00  0.00   \n",
+       "2998        SMM    test          100         10    1.0  1.000000e+00  0.00   \n",
+       "2999       SORD    test          100         10    1.0  1.000000e+00  0.00   \n",
+       "\n",
+       "      abs_error  \n",
+       "0      0.000085  \n",
+       "1      0.000083  \n",
+       "2      0.000409  \n",
+       "3      0.008063  \n",
+       "4      0.080928  \n",
+       "...         ...  \n",
+       "2995   0.077645  \n",
+       "2996   0.016057  \n",
+       "2997   0.036922  \n",
+       "2998   0.000336  \n",
+       "2999   0.186553  \n",
+       "\n",
+       "[3000 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -63,122 +231,124 @@
     "\n",
     "\n",
     "qtf_evaluator = QuantifierEvaluator()\n",
-    "qtf_evaluator.evaluate_quantifiers(\"test\", X_train, y_train, X_test, y_test)\n",
+    "eval = qtf_evaluator.evaluate_quantifiers(\"test\", X_train, y_train, X_test, y_test)\n",
+    "\n",
+    "eval\n",
+    "\n",
+    "# train_scores, clf = getTrainingScores(X_train, y_train, 10, LogisticRegression(random_state=42))\n",
+    "# y_labels = train_scores.pop('class').to_numpy()\n",
+    "\n",
+    "# test_scores = clf.predict_proba(X_test)# [:,1]\n",
+    "# y_pred = clf.predict(X_test)\n",
+    "\n",
+    "# #    - y_pred \n",
+    "# #         - posteriors_test\n",
+    "# #         - y_labels\n",
+    "# #         = posteriors_train\n",
+    "\n",
+    "# _dts_test = pd.DataFrame(X_test)\n",
+    "\n",
+    "# set_arguments(y_pred=y_pred.tolist(), # Predictions for the TEST set ()\n",
+    "#                 posteriors_test=test_scores, # Scores of the TEST set ()\n",
+    "#                  y_labels=y_labels.tolist(), # True labels of the TRAIN set ()\n",
+    "#                  posteriors_train=train_scores # Scores extracted from TRAIN set ()\n",
+    "#             )\n",
+    "\n",
+    "# methods = deepcopy(AGGREGATIVE)\n",
+    "# methods.pop('GAC', None)\n",
+    "# methods.pop('GPAC', None)\n",
+    "# # methods.pop('FM', None)\n",
+    "# # methods.pop('DySsyn', None)\n",
+    "\n",
+    "# for key, value in methods.items():\n",
+    "#      if key == \"PWK\":\n",
+    "#           qtf = value(learner=PWKCLF())\n",
+    "#      else:\n",
+    "#           qtf = value()\n",
+    "#      qtf.fit(X_train, y_train)\n",
+    "#      print(f\"{key}: {qtf.predict(X_test)[1]}\")\n",
     "\n",
     "\n",
-    "train_scores, clf = getTrainingScores(X_train, y_train, 10, LogisticRegression(random_state=42))\n",
-    "y_labels = train_scores.pop('class').to_numpy()\n",
-    "test_scores = clf.predict_proba(X_test)# [:,1]\n",
-    "y_pred = clf.predict(X_test)\n",
+    "# # pwk = PWK(learner=PWKCLF())\n",
+    "# # ms2 = MS2()\n",
+    "# # t50 = T50()\n",
+    "# # emq = EMQ()\n",
     "\n",
-    "#    - y_pred \n",
-    "#         - posteriors_test\n",
-    "#         - y_labels\n",
-    "#         = posteriors_train\n",
-    "\n",
-    "_dts_test = pd.DataFrame(X_test)\n",
-    "\n",
-    "set_arguments(y_pred=y_pred.tolist(), # Predictions for the TEST set ()\n",
-    "                posteriors_test=test_scores, # Scores of the TEST set ()\n",
-    "                 y_labels=y_labels.tolist(), # True labels of the TRAIN set ()\n",
-    "                 posteriors_train=train_scores # Scores extracted from TRAIN set ()\n",
-    "            )\n",
-    "\n",
-    "methods = deepcopy(AGGREGATIVE)\n",
-    "methods.pop('GAC', None)\n",
-    "methods.pop('GPAC', None)\n",
-    "# methods.pop('FM', None)\n",
-    "# methods.pop('DySsyn', None)\n",
-    "\n",
-    "for key, value in methods.items():\n",
-    "     if key == \"PWK\":\n",
-    "          qtf = value(learner=PWKCLF())\n",
-    "     else:\n",
-    "          qtf = value()\n",
-    "     qtf.fit(X_train, y_train)\n",
-    "     print(f\"{key}: {qtf.predict(X_test)}\")\n",
-    "\n",
-    "\n",
-    "# pwk = PWK(learner=PWKCLF())\n",
-    "# ms2 = MS2()\n",
-    "# t50 = T50()\n",
-    "# emq = EMQ()\n",
-    "\n",
-    "# pwk.fit(X_train, y_train)\n",
-    "# ms2.fit(X_train, y_train)\n",
-    "# t50.fit(X_train, y_train)\n",
-    "# emq.fit(X_train, y_train)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(f\"PWK: {pwk.predict(X_test)}\")\n",
-    "# print(f\"MS2: {ms2.predict(X_test)}\")\n",
-    "# print(f\"T50: {t50.predict(X_test)}\")\n",
-    "# print(f\"EMQ: {emq.predict(X_test)}\")\n",
+    "# # pwk.fit(X_train, y_train)\n",
+    "# # ms2.fit(X_train, y_train)\n",
+    "# # t50.fit(X_train, y_train)\n",
+    "# # emq.fit(X_train, y_train)\n",
     "\n",
     "\n",
     "\n",
-    "# pwk.fit(X_train, y_train)\n",
-    "# ms2.fit(X_train, y_train)\n",
-    "# t50.fit(X_train, y_train)\n",
-    "# emq.fit(X_train, y_train)\n",
+    "# # print(f\"PWK: {pwk.predict(X_test)}\")\n",
+    "# # print(f\"MS2: {ms2.predict(X_test)}\")\n",
+    "# # print(f\"T50: {t50.predict(X_test)}\")\n",
+    "# # print(f\"EMQ: {emq.predict(X_test)}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # pwk.fit(X_train, y_train)\n",
+    "# # ms2.fit(X_train, y_train)\n",
+    "# # t50.fit(X_train, y_train)\n",
+    "# # emq.fit(X_train, y_train)\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "# print(cc.predict(X_test))\n",
+    "# # print(cc.predict(X_test))\n",
     "\n",
-    "# acc.fit(X_train, y_train)\n",
-    "# print(acc.predict(X_test))\n",
+    "# # acc.fit(X_train, y_train)\n",
+    "# # print(acc.predict(X_test))\n",
     "\n",
-    "# max.fit(X_train, y_train)\n",
-    "# print(max.predict(X_test))\n",
+    "# # max.fit(X_train, y_train)\n",
+    "# # print(max.predict(X_test))\n",
     "\n",
-    "# pcc.fit(X_train, y_train)\n",
-    "# print(pcc.predict(X_test))\n",
+    "# # pcc.fit(X_train, y_train)\n",
+    "# # print(pcc.predict(X_test))\n",
     "\n",
-    "# pacc.fit(X_train, y_train)\n",
-    "# print(pacc.predict(X_test))\n",
+    "# # pacc.fit(X_train, y_train)\n",
+    "# # print(pacc.predict(X_test))\n",
     "\n",
-    "# x_method.fit(X_train, y_train)\n",
-    "# print(x_method.predict(X_test))\n",
+    "# # x_method.fit(X_train, y_train)\n",
+    "# # print(x_method.predict(X_test))\n",
     "\n",
-    "# ms.fit(X_train, y_train)\n",
-    "# print(ms.predict(X_test))\n",
+    "# # ms.fit(X_train, y_train)\n",
+    "# # print(ms.predict(X_test))\n",
     "\n",
-    "# ms2.fit(X_train, y_train)\n",
-    "# print(ms2.predict(X_test))\n",
+    "# # ms2.fit(X_train, y_train)\n",
+    "# # print(ms2.predict(X_test))\n",
     "\n",
-    "# hdy.fit(X_train, y_train)\n",
-    "# print(hdy.predict(X_test))\n",
+    "# # hdy.fit(X_train, y_train)\n",
+    "# # print(hdy.predict(X_test))\n",
     "\n",
-    "# smm.fit(X_train, y_train)\n",
-    "# print(smm.predict(X_test))\n",
+    "# # smm.fit(X_train, y_train)\n",
+    "# # print(smm.predict(X_test))\n",
     "\n",
-    "# sord.fit(X_train, y_train)\n",
-    "# print(sord.predict(X_test))\n",
+    "# # sord.fit(X_train, y_train)\n",
+    "# # print(sord.predict(X_test))\n",
     "\n",
-    "# dys.fit(X_train, y_train)\n",
-    "# print(dys.predict(X_test))\n",
+    "# # dys.fit(X_train, y_train)\n",
+    "# # print(dys.predict(X_test))\n",
     "\n",
-    "# pwk.fit(X_train, y_train)\n",
-    "# print(pwk.predict(X_test))\n",
+    "# # pwk.fit(X_train, y_train)\n",
+    "# # print(pwk.predict(X_test))\n",
     "\n",
-    "# t50.fit(X_train, y_train)\n",
-    "# print(t50.predict(X_test))\n",
+    "# # t50.fit(X_train, y_train)\n",
+    "# # print(t50.predict(X_test))\n",
     "\n",
-    "# emq.fit(X_train, y_train)\n",
-    "# # print(emq.predict(X_test))\n",
-    "# a = emq.predict(X_test)\n",
-    "# print()\n",
-    "# a\n",
+    "# # emq.fit(X_train, y_train)\n",
+    "# # # print(emq.predict(X_test))\n",
+    "# # a = emq.predict(X_test)\n",
+    "# # print()\n",
+    "# # a\n",
     "\n",
-    "# t50.fit(X_train, y_train)\n",
-    "# print(t50.predict(X_test))\n",
+    "# # t50.fit(X_train, y_train)\n",
+    "# # print(t50.predict(X_test))\n",
     "\n",
-    "# t50._g_probabilities[0][0]\n",
+    "# # t50._g_probabilities[0][0]\n",
     "\n",
-    "# print(_T50(test_scores=test_scores, tprfpr=tprfpr))"
+    "# # print(_T50(test_scores=test_scores, tprfpr=tprfpr))"
    ]
   },
   {
@@ -186,25 +356,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eval.to_csv('test_eval.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tprfpr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tpr \u001b[38;5;241m=\u001b[39m \u001b[43mtprfpr\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtpr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m      2\u001b[0m fpr \u001b[38;5;241m=\u001b[39m tprfpr[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfpr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m      3\u001b[0m tpr\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tprfpr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import secrets\n",
+    "\n",
+    "# seed = secrets.randbits(128)\n",
+    "seed = int(91243342813999289490899206158518312834)\n",
+    "rng = np.random.default_rng(seed=seed)\n",
+    "\n",
+    "a = int(rng.random() * 1000)\n",
+    "\n",
+    "rng2 = np.random.default_rng(seed=seed)\n",
+    "\n",
+    "\n",
+    "dts_train = pd.read_csv(\"./data/train_set/winetype.csv\")\n",
+    "dts_test = pd.read_csv(\"./data/test_set/winetype.csv\")\n",
+    "\n",
+    "y_train = dts_train.pop('class').to_numpy()\n",
+    "X_train = dts_train.values\n",
+    "\n",
+    "y_test = dts_test.pop('class').to_numpy()\n",
+    "X_test = dts_test.values\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "print(rng.choice(X_test[0], replace=False))\n",
+    "\n",
+    "print(rng2.choice(X_test[0], replace=False))\n",
+    "print(rng2.choice(X_test[0], replace=False))\n",
+    "print(rng2.choice(X_test[0], replace=False))\n",
+    "print(rng2.choice(X_test[0], replace=False))\n",
+    "print(rng2.choice(X_test[0], replace=False))\n",
+    "print(rng2.choice(X_test[0], replace=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = int(91243342813999289490899206158518312834)\n",
+    "rng = np.random.default_rng(seed=seed)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    a = int(rng.random() * 1000000)\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "tpr = tprfpr['tpr'].to_numpy()\n",
     "fpr = tprfpr['fpr'].to_numpy()\n",
@@ -273,6 +493,23 @@
     "\n",
     "\n",
     "mq.methods.ACC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "seed = int(91243342813999289490899206158518312834)\n",
+    "rng = np.random.default_rng(seed=seed)\n",
+    "\n",
+    "random_data = np.random.rand(25, 5)\n",
+    "all_indices = rng.permutation(np.arange(random_data.shape[0]))\n",
+    "print(all_indices)"
    ]
   }
  ],
