--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -8,20 +8,19 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.base import clone\n",
     "\n",
     "ROOT_DIR = \"./plot_data/experiment-1/tables/\"\n",
+    "RESULTS_DIR = \"./plot_data/experiment-1/results/\"\n",
     "\n",
-    "meta_features = pd.read_csv(ROOT_DIR + 'meta_features_table.csv')\n",
+    "meta_features = pd.read_csv(ROOT_DIR + 'meta_features_table.csv') # MinMax Scaled\n",
     "\n",
     "reg_quantifiers_eval = pd.read_csv(ROOT_DIR + 'reg_quantifiers_evaluation_table.csv', index_col=0)\n",
     "knn_quantifiers_eval = pd.read_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table.csv', index_col=0)\n",
     "\n",
-    "\n",
-    "reg_quantifiers_eval_agg  = aggregate_evaluation_table(reg_quantifiers_eval, func_type=\"cost\")\n",
-    "knn_quantifiers_eval_agg = aggregate_evaluation_table(knn_quantifiers_eval, func_type=\"utility\")\n",
-    "\n",
-    "reg_quantifiers_eval_agg.to_csv(ROOT_DIR + 'reg_quantifiers_evaluation_table_agg.csv')\n",
-    "knn_quantifiers_eval_agg.to_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table_agg.csv')"
+    "reg_quantifiers_eval_agg = pd.read_csv(ROOT_DIR + 'reg_quantifiers_evaluation_table_agg.csv', index_col=0)\n",
+    "knn_quantifiers_eval_agg = pd.read_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table_agg.csv', index_col=0)"
    ]
   },
   {
@@ -30,7 +29,93 @@
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fit_regressor(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table):\n",
+    "    meta_features_table = meta_features_table\n",
+    "    not_agg_evaluation_table = not_aggregated_evaluation_table\n",
+    "    evaluation_table = evaluation_table\n",
+    "\n",
+    "    model_dict = {}\n",
+    "    \n",
+    "    X_train = meta_features_table.values\n",
+    "    y_train = None\n",
+    "    for quantifier in evaluation_table.index.levels[0].tolist():\n",
+    "        y_train = evaluation_table.loc[quantifier]['abs_error'].values\n",
+    "        model_dict[quantifier] = clone(model)\n",
+    "        model_dict[quantifier].fit(X_train, y_train)\n",
+    "\n",
+    "    return model_dict\n",
+    "\n",
+    "# Evaluate Quantifier Recommender with Leave-One-Out\n",
+    "def loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, recommender_eval_path: str = None):\n",
+    "    aux_recommender_evaluation_table = pd.DataFrame(columns=[\"predicted_error\", \"true_error\"], index=evaluation_table.index)\n",
+    "    for quantifier, recommender in model_dict.items():\n",
+    "        recommender_ = clone(recommender)\n",
+    "        for dataset in evaluation_table.index.levels[1]:\n",
+    "            X_test = meta_features_table.loc[dataset].values\n",
+    "            X_test = np.array(X_test).reshape(1, -1)\n",
+    "            y_test = evaluation_table.loc[quantifier, dataset]['abs_error']\n",
+    "\n",
+    "            X_train = meta_features_table.drop(index=dataset).values\n",
+    "            y_train = evaluation_table.loc[quantifier].drop(index=dataset)['abs_error'].values\n",
+    "\n",
+    "            recommender_.fit(X_train, y_train)\n",
+    "            predicted_error = recommender_.predict(X_test)[0]\n",
+    "\n",
+    "            aux_recommender_evaluation_table.loc[(quantifier, dataset)] = [predicted_error, y_test]\n",
+    "    \n",
+    "    datasets = aux_recommender_evaluation_table.index.get_level_values('dataset').unique()\n",
+    "    recommender_evaluation_table = pd.DataFrame(columns=[\"predicted_ranking\", \"predicted_ranking_weights\", \"predicted_ranking_mae\",\n",
+    "                                                            \"true_ranking\", \"true_ranking_weights\", \"true_ranking_mae\"], index=datasets)\n",
+    "    for dataset in datasets:\n",
+    "        filtered_result = aux_recommender_evaluation_table.xs(dataset, level='dataset')\n",
+    "        \n",
+    "        predicted_ranking = filtered_result.sort_values(by='predicted_error').index.tolist()\n",
+    "        predicted_ranking_mae = [filtered_result.loc[quantifier, 'predicted_error'] for quantifier in predicted_ranking]\n",
+    "\n",
+    "        errors = np.array(predicted_ranking_mae)\n",
+    "        denominator = np.sum(1/errors)\n",
+    "        predicted_ranking_weights = (1/errors)/denominator\n",
+    "\n",
+    "        true_ranking = filtered_result.sort_values(by='true_error').index.tolist()\n",
+    "        true_ranking_mae = [filtered_result.loc[quantifier, 'true_error'] for quantifier in true_ranking]\n",
+    "\n",
+    "        errors = np.array(true_ranking_mae)\n",
+    "        if np.any(errors == 0):\n",
+    "            errors = np.array([1e-6 if x == 0 else x for x in errors])\n",
+    "        denominator = np.sum(1/errors)\n",
+    "        true_ranking_weights = (1/errors)/denominator\n",
+    "\n",
+    "        recommender_evaluation_table.loc[dataset] = [predicted_ranking, predicted_ranking_weights, predicted_ranking_mae,\n",
+    "                                                        true_ranking, true_ranking_weights, true_ranking_mae]\n",
+    "        \n",
+    "    if not recommender_eval_path is None:\n",
+    "        recommender_evaluation_table.to_csv(recommender_eval_path)\n",
+    "    \n",
+    "    not_agg_evaluation_table = not_agg_evaluation_table.copy(deep=True)\n",
+    "    not_agg_evaluation_table.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
+    "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return recommender_evaluation_table, not_agg_evaluation_table\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa34d2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
+    "model = KNeighborsRegressor()\n",
+    "meta_features_table = meta_features\n",
+    "evaluation_table = reg_quantifiers_eval_agg\n",
+    "not_aggregated_evaluation_table = reg_quantifiers_eval\n",
+    "\n",
+    "model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
+    "_,_ = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"neigh_regressor_recommendation_eval.csv\")"
+   ]
   }
  ],
  "metadata": {
